--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,6 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>brain-api</groupId>
-  		<artifactId>brain-api</artifactId>
-  		<version>0.1.0-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
   		<groupId>commons-cli</groupId>
   		<artifactId>commons-cli</artifactId>
   		<version>1.3.1</version>
@@ -37,6 +32,21 @@
   		<groupId>com.opencsv</groupId>
   		<artifactId>opencsv</artifactId>
   		<version>3.5</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>brain-api</groupId>
+  		<artifactId>brain-api</artifactId>
+  		<version>0.1.3-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>rxnorm</groupId>
+  		<artifactId>rxnorm</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
 </project>
